# clubtwitshows

./: .gitignore  README.md  clubtwit.py  clubtwit_old.py  pyproject.toml  readme.md  requirements.txt  requirments.txt
src/clubtwitshows/: __init__.py  core.py
