[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clubtwitshows"
version = "0.1.0"
description = "A library to access Club Twit shows."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0" }
authors = [
    { name = "Mainmeister" },
]
dependencies = [
    "lxml>=6.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.1",
]
